tests/analyzer/errors/non_struct_struct_literal.rv
fn Person() {}

fn main() {
    var p = Person.{}
}


